maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:26: error: value dir is not a member of object plm.universe.Direction
  setDirection(Direction.dir)
                         ^Escaper:39: error: value direct is not a member of object plm.universe.Direction
      setDirection(Direction.direct)
                             ^