maze.lessons.maze.pledge.PledgeMaze.scala.code
var sommeAngle:Int = 0

def keepHandOnSideWall() {
  gauche()
  if (estFaceMur() == false) {
    avance()
    sommeAngle = sommeAngle + 1
  } else {
    droite()
    if (estFaceMur() == false) {
      avance()
    } else {
      droite()
      if (estFaceMur() == false) {
        avance()
        sommeAngle = sommeAngle - 1
      } else {
        droite(); avance()
      }
    }
  }
}

def isDirectionFree(dir:Direction):Boolean = {
  setDirection(Direction.dir)
  if (estFaceMur == false) {
    return true
  }
  return false
}

override def run() {
  while (getY() != 0) {
    var direct:Direction = getDirection()
    if (isDirectionFree(Direction.NORD)) {
      avance()
    } else {
      setDirection(Direction.direct)
      keepHandOnSideWall(); setDirection(Direction.NORD)
    }
  }
  setDirection(Direction.EAST)
  while (porteBiscuit() == false) {
    if (estSurBiscuit == true) {
      prendBiscuit()
    } else {
      
      keepHandOnSideWall()
    }
  }
}